bin/tests/snapshots/main__empty_let_in_fix.snap
---
source: bin/tests/main.rs
expression: "& stdout"
---
--- tests/data/empty_let_in.nix
+++ tests/data/empty_let_in.nix [fixed]
@@ -1,10 +1,6 @@
 [
-  (
-    let
-    in
-    null
-  )
+  null
   (
     let
       # don't fix this, we have a comment
       # raise the lint though
