bin/tests/snapshots/main__empty_pattern_lint.snap
---
source: bin/tests/main.rs
expression: "&stdout"
---
[W10] Warning: Found empty pattern in function argument
   ╭─[tests/data/empty_pattern.nix:3:4]
   │
 3 │   ({ ... }: 42)
   ·    ───┬───  
   ·       ╰───── This pattern is empty, use _ instead
───╯
[W11] Warning: Found redundant pattern bind in function argument
   ╭─[tests/data/empty_pattern.nix:7:4]
   │
 7 │   ({ ... } @ inputs: inputs)
   ·    ────────┬───────  
   ·            ╰───────── This pattern bind is redundant, use inputs instead
───╯
