bin/tests/snapshots/main__eta_reduction.snap
---
source: bin/tests/main.rs
expression: "&out"

---
[W07] Warning: This function expression is eta reducible
    ╭─[data/eta_reduction.nix:11:9]
    │
 11 │   (map (x: double x) xs)
    ·         ─────┬─────  
    ·              ╰─────── Found eta-reduction: double
────╯

