bin/tests/snapshots/main__eta_reduction_lint.snap
---
source: bin/tests/main.rs
expression: "&stdout"
---
[W07] Warning: This function expression is eta reducible
    ╭─[tests/data/eta_reduction.nix:11:9]
    │
 11 │   (map (x: double x) xs)
    ·         ─────┬─────  
    ·              ╰─────── Found eta-reduction: double
────╯
