bin/tests/snapshots/main__faster_groupby.snap
---
source: bin/tests/main.rs
expression: "& out"
---
[W15] Warning: Found lib.groupBy
   ╭─[data/faster_groupby.nix:3:7]
   │
 3 │   _ = lib.groupBy (x: if x > 2 then "big" else "small") [ 1 2 3 4 5 ];
   │       ─────┬─────  
   │            ╰─────── Prefer builtins.groupBy over lib.groupBy
───╯
[W15] Warning: Found lib.groupBy
   ╭─[data/faster_groupby.nix:6:7]
   │
 6 │   _ = nixpkgs.lib.groupBy (x: if x > 2 then "big" else "small") [ 1 2 3 4 5 ];
   │       ─────────┬─────────  
   │                ╰─────────── Prefer builtins.groupBy over nixpkgs.lib.groupBy
───╯
